@@ -1,6 +1,12 @@
 package tallestred.numismaticoverhaul.block;
 
+import net.minecraft.core.HolderLookup;
+import net.minecraft.core.component.DataComponentPredicate;
+import net.minecraft.core.registries.BuiltInRegistries;
+import net.minecraft.network.chat.Component;
+import net.minecraft.world.item.trading.ItemCost;
 import tallestred.numismaticoverhaul.currency.CurrencyConverter;
+import tallestred.numismaticoverhaul.currency.CurrencyHelper;
 import tallestred.numismaticoverhaul.item.MoneyBagItem;
 import tallestred.numismaticoverhaul.villagers.data.NumismaticTradeOfferExtensions;
 import net.minecraft.core.NonNullList;
@@ -28,12 +34,11 @@ public class ShopOffer {
 
     @SuppressWarnings("ConstantConditions")
     public MerchantOffer toTradeOffer(ShopBlockEntity shop, boolean inexhaustible) {
-        var buy = CurrencyConverter.getRequiredCurrencyTypes(price) == 1 ? CurrencyConverter.getAsItemStackList(price).get(0) : MoneyBagItem.create(price);
+        boolean isPocketChange = CurrencyConverter.getRequiredCurrencyTypes(price) == 1;
+        var buyStack = isPocketChange ? CurrencyConverter.getAsItemStackList(price).getFirst() : MoneyBagItem.fromRawValue(price);
         int maxUses = inexhaustible ? Integer.MAX_VALUE : count(shop.getItems(), sell) / sell.getCount();
-
-        final var tradeOffer = new MerchantOffer(buy, sell, maxUses, 0, 0);
-        ((NumismaticTradeOfferExtensions) tradeOffer).numismatic$setReputation(-69420);
-        return tradeOffer;
+        var tradedItem = isPocketChange ? new ItemCost(buyStack.getItem(), (int) price) : new ItemCost(buyStack.getItemHolder(), 1, DataComponentPredicate.EMPTY, buyStack);
+        return new MerchantOffer(tradedItem, sell, maxUses, 0, 0);
     }
 
     public long getPrice() {
@@ -44,12 +49,12 @@ public class ShopOffer {
         return sell.copy();
     }
 
-    public static CompoundTag writeAll(CompoundTag tag, List<ShopOffer> offers) {
+    public static CompoundTag writeAll(CompoundTag tag, List<ShopOffer> offers, HolderLookup.Provider access) {
 
         ListTag offerList = new ListTag();
 
         for (ShopOffer offer : offers) {
-            offerList.add(offer.toNbt());
+            offerList.add(offer.toNbt(access));
         }
 
         tag.put("Offers", offerList);
@@ -57,36 +62,36 @@ public class ShopOffer {
         return tag;
     }
 
-    public static void readAll(CompoundTag tag, List<ShopOffer> offers) {
+    public static void readAll(CompoundTag tag, List<ShopOffer> offers, HolderLookup.Provider access) {
         offers.clear();
 
         ListTag offerList = tag.getList("Offers", Tag.TAG_COMPOUND);
 
         for (Tag offerTag : offerList) {
-            offers.add(fromNbt((CompoundTag) offerTag));
+            offers.add(fromNbt(access, (CompoundTag) offerTag));
         }
     }
 
-    public CompoundTag toNbt() {
+    public CompoundTag toNbt(HolderLookup.Provider access) {
         var nbt = new CompoundTag();
         nbt.putLong("Price", this.price);
 
         var itemNbt = new CompoundTag();
-        this.sell.save(itemNbt);
+        this.sell.save(access, itemNbt);
 
         nbt.put("Item", itemNbt);
         return nbt;
     }
 
-    public static ShopOffer fromNbt(CompoundTag nbt) {
-        var item = ItemStack.of(nbt.getCompound("Item"));
+    public static ShopOffer fromNbt(HolderLookup.Provider access, CompoundTag nbt) {
+        var item = ItemStack.parseOptional(access, nbt.getCompound("Item"));
         return new ShopOffer(item, nbt.getLong("Price"));
     }
 
     public static int count(NonNullList<ItemStack> stacks, ItemStack testStack) {
         int count = 0;
         for (var stack : stacks) {
-            if (!ItemStack.isSameItemSameTags(stack, testStack)) continue;
+            if (!ItemStack.matches(stack, testStack)) continue;
             count += stack.getCount();
         }
         return count;
@@ -95,7 +100,7 @@ public class ShopOffer {
     public static int remove(NonNullList<ItemStack> stacks, ItemStack removeStack) {
         int toRemove = removeStack.getCount();
         for (var stack : stacks) {
-            if (!ItemStack.isSameItemSameTags(stack, removeStack)) continue;
+            if (!ItemStack.matches(stack, removeStack)) continue;
 
             int removed = stack.getCount();
             stack.shrink(toRemove);
